<resources>
    <string name="app_name">SubMan</string>

    <!-- activity_main.xml -->
    <string name="activity_main_materias_text">Matérias</string>
    <string name="activity_main_datas_text">Datas</string>

    <!-- menu_main.xml -->
    <string name="menu_main_sobre">Sobre</string>

    <!-- activity_materias.xml -->
    <string name="activity_materias_materia_text">Matéria</string>
    <string name="activity_materias_materia_hint">Nome</string>
    <string name="activity_materias_professor_text">Professor</string>
    <string name="activity_materias_professor_hint">Nome</string>
    <string name="activity_materias_professor_error">Campo nome deve ser preenchido!</string>

    <!-- menu_main.xml -->
    <string name="menu_main_sobre_text">Sobre</string>

    <!-- menu_materias.xml -->
    <string name="menu_materias_salvar_text">Salvar</string>
    <string name="menu_materias_excluir_text">Excluir</string>

    <!-- menu_avaliacoes.xml -->
    <string name="menu_avaliacoes_salvar_text">Salvar</string>
    <string name="menu_avaliacoes_excluir_text">Excluir</string>

    <!-- fragment_avaliacoes.xml -->
    <string name="fragment_avaliacoes_descricao_text">Descrição</string>
    <string name="fragment_avaliacoes_data_text">Data</string>
    <string name="fragment_avaliacoes_peso_text">Peso</string>
    <string name="fragment_avaliacoes_nota_text">Nota</string>
    <string-array name="fragment_avaliacoes_tipos">
        <item>Prova</item>
        <item>Trabalho</item>
    </string-array>

    <!-- activity_avaliacoes.xml -->
    <string name="activity_avaliacoes_descricao_text">Descrição</string>
    <string name="activity_avaliacoes_data_text">Data</string>
    <string name="activity_avaliacoes_concluido_text">Concluído</string>
    <string name="activity_avaliacoes_peso_text">Peso</string>
    <string name="activity_avaliacoes_nota_text">Nota</string>
    <string-array name="activity_avaliacoes_tipos">
        <item>Prova</item>
        <item>Trabalho</item>
    </string-array>

    <!-- Dialogo -->
    <string name="dialog_janela_exclusao_titulo_text">Exclusão</string>
    <string name="dialog_janela_exclusao_mensagem_text">Tem certeza que deseja excluir?</string>
</resources>
